[metadata]
name = rasa_helpers
version = 0.0.1
author = EdC
author_email = etienne@translatorswithoutborders.org
description = Collection of tools useful when developing with Rasa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/E-dC/rasa_helpers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Software Development :: Testing
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
scripts =
    bin/nlg_server.py
    bin/find_elements_missing_from_domain.py
