[metadata]
name = rasa_helpers
version = 0.0.1
author = EdC
author_email = etienne@translatorswithoutborders.org
description = Collection of tools useful when developing with Rasa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/E-dC/rasa_helpers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Software Development :: Testing
    Intended Audience :: Developers

[options]
packages = find:
install_requires =
    rasa >= 2.8.8
    ruamel.yaml >= 0.16.13
    mypy-extensions >= 0.4.3
    sanic <= 21.9.3
python_requires = >=3.6

[options.entry_points]
console_scripts =
    rh = rasa_helpers.cli_main:main
    rasa-helpers = rasa_helpers.cli_main:main
